# sawyer-agent

./: .coverage  .gitignore  GETTING_STARTED.md  LICENSE  MODELS.md  README.md  config.example.yaml  install-sawyer.bat  install-sawyer.sh  install_shortcut.py  pyproject.toml  sawyer-web.bat  sawyer.bat  start-sawyer.bat  start_test_server.py
.github/workflows/: ci.yml
docs/: agent-integration.md  gpu-cloud-provider-comparison.md  orchestration-design.md  provider-recruitment-posts.md  sawyer_video.py
docs/media/videos/sawyer_video/1080p60/: Scene1_PriceShock.srt  Scene4_WhatYouGet.srt  Scene5_Demo.srt  Scene7_Providers.srt  Scene8_CTA.srt  concat.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene1_PriceShock/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene2_TheGap/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene3_HowItWorks/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene4_WhatYouGet/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene5_Demo/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene6_Tiers/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene7_Providers/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/1080p60/partial_movie_files/Scene8_CTA/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/: Scene1_PriceShock.srt  Scene2_TheGap.srt  Scene3_HowItWorks.srt  Scene5_Demo.srt  Scene6_Tiers.srt  Scene7_Providers.srt  concat.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene1_PriceShock/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene2_TheGap/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene3_HowItWorks/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene4_WhatYouGet/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene5_Demo/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene6_Tiers/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene7_Providers/: partial_movie_file_list.txt
docs/media/videos/sawyer_video/480p15/partial_movie_files/Scene8_CTA/: partial_movie_file_list.txt
docs/plans/: 2026-07-16-session-scoring-lkg-revert-agreeability-reasoning.md
sawyer/: __init__.py  __main__.py  cli.py  config.py  sawyer.bat
sawyer/auth/: __init__.py  api.py
sawyer/client/: __init__.py  faq_html.py
sawyer/dashboard/: __init__.py  server.py  signup.py
sawyer/identity/: __init__.py  bedrock.py
sawyer/model/: registry.py
sawyer/node/: agent.py
sawyer/proto/: __init__.py  sawyer.proto  sawyer_pb2.py  sawyer_pb2_grpc.py
sawyer/provider/: __init__.py  dashboard.py  earnings_sync.py  manager.py  quarterly_payout.py  stripe_connect.py  webhook.py
sawyer/router/: __init__.py  client.py  gateway.py  gating.py  local_router.py  pipeline.py  scheduler.py  server.py
sawyer/storage/: database.py
sawyer/token/: budget.py  stripe.py
sawyer_harness/: SOUL.md  __init__.py  __main__.py  agent.py  agent_creator.py  agent_discovery.py  capabilities.yaml  cli.py  compression.py  config.py  context_manager.py  goal_loop.py  key_storage.py  launch.py  launcher.py  lkg.py  llm.py  memory.py  memory_bootstrap.py  orchestrator.py  paths.py  project.py  provider_check.py  routing.py  rules.py  scheduler.py  scoring.py  self_test.py  session_engine.py  session_store.py  setup_desktop.py  skill_creator.py  skills.py  suggestions.py  telegram_adapter.py  token_count.py  tool_creator.py  tools.py  user_tools.py  vision_bridge.py
sawyer_harness/scripts/: create-shortcut.ps1
sawyer_harness/web/: __init__.py  server.py
sawyer_harness/web/static/: index.html  manifest.json
sawyer_harness/web/static/lib/: api.js  app.js  state.js  ws.js
sawyer_harness/web/static/styles/: base.css  panels.css  tokens.css
scripts/: install_sawyer.ps1  install_sawyer.sh  install_sawyer_macos.sh
site/: index.html  install.ps1
tests/: test_agent_creator.py  test_auth.py  test_client.py  test_core.py  test_dashboard.py  test_earnings_sync.py  test_gating.py  test_grpc.py  test_identity.py  test_integration.py  test_key_storage.py  test_launch.py  test_new_features.py  test_orchestrator.py  test_phase3.py  test_pipeline.py  test_provider.py  test_provider_webhook.py  test_quarterly_payout.py  test_ralph_loop.py  test_routing.py  test_rules.py  test_sawyer.py  test_scheduler.py  test_session_store.py  test_skill_creator.py  test_skills.py  test_stripe.py  test_telegram.py  test_token_count.py  test_tools.py
