[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sawyer-agent"
dynamic = ["version"]
description = "Secure, model-agnostic, self-hosted AI agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "David Campbell"},
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.7.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
sawyer-web = "sawyer_harness.cli:main"

[tool.setuptools.packages.find]
include = ["sawyer_harness*"]

[tool.setuptools.dynamic]
version = {attr = "sawyer_harness.__version__"}

[tool.setuptools.package-data]
sawyer_harness = [
    "capabilities.yaml",
    "web/static/**/*",
    "web/static/SAWYER_AGENT.ico",
    "scripts/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Only enforce critical errors in CI; style warnings are informational
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_site_packages = true
# Strict mode disabled for CI; individual modules can opt in via:
#   # mypy: strict
# Gradual typing: enable strict checks as modules are annotated.
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--cov=sawyer_harness --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["sawyer_harness"]
omit = [
    "tests/*",
    "sawyer_harness/__main__.py",
    "sawyer_harness/cli.py",
    "sawyer_harness/launcher.py",
    "sawyer_harness/web/*",
    "sawyer_harness/tool_creator.py",
    "sawyer_harness/user_tools.py",
    "sawyer_harness/suggestions.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true